<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="16dp"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:textSize="50sp"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:maxLength="12"
        />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:textSize="50sp"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:maxLength="11"
        android:onClick="onPercentage"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnAllClear"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:onClick="onCLR"
            />

        <Button
            android:id="@+id/btnMod"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/mod"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="onPercentage"
            />

        <Button
            android:id="@+id/btnBackspace"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/backspace"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:onClick="onBackspace"
            />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:onClick="onOperators"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/seven"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/eight"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/nine"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/multiply"
            android:textSize="25sp"
            android:onClick="onOperators"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/four"
            android:textSize="25sp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/five"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/six"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/orange"
            android:text="@string/subtract"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="onOperators"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/one"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/two"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/three"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/orange"
            android:text="@string/add"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="onOperators"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn00"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/doubleZero"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onDigit"
            />

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/zero"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnDot"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/grey"
            android:text="@string/dot"
            android:onClick="onDecimal"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/orange"
            android:text="@string/equals"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="onEqual"/>
    </LinearLayout>
</LinearLayout >


